--fix bug swagger api ui and results
